@@ -243,6 +243,7 @@ g_file_create_async
 g_file_create_finish
 g_file_replace_async
 g_file_replace_finish
+g_file_query_exists
 g_file_query_info
 g_file_query_info_async
 g_file_query_info_finish
